@@ -19,18 +19,17 @@
  */
 package org.xwiki.notifications.filters.internal.scope;
 
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import javax.inject.Named;
 
 import org.junit.jupiter.api.Test;
-import org.mockito.internal.util.collections.Sets;
 import org.xwiki.eventstream.Event;
 import org.xwiki.model.EntityType;
 import org.xwiki.model.reference.DocumentReference;
@@ -80,7 +79,7 @@ class ScopeNotificationFilterTest
 
     @MockComponent
     private NotificationFilterManager notificationFilterManager;
-    
+
     @MockComponent
     @Named("local")
     private EntityReferenceSerializer<String> serializer;
@@ -90,9 +89,9 @@ class ScopeNotificationFilterTest
 
     @MockComponent
     private EntityReferenceResolver<String> resolver;
-    
+
     private NotificationFilterPreference mockNotificationFilterPreference(String entityStringValue,
-            EntityReference resultReference, NotificationFilterType filterType, String eventName)
+        EntityReference resultReference, NotificationFilterType filterType, String eventName)
     {
         NotificationFilterPreference preference = mock(NotificationFilterPreference.class);
         when(preference.getId()).thenReturn("NFP_343");
@@ -107,16 +106,16 @@ class ScopeNotificationFilterTest
         }
         when(preference.getFilterName()).thenReturn(ScopeNotificationFilter.FILTER_NAME);
         if (eventName != null) {
-            when(preference.getEventTypes()).thenReturn(Sets.newSet(eventName));
+            when(preference.getEventTypes()).thenReturn(Set.of(eventName));
         }
         when(preference.getFilterType()).thenReturn(filterType);
         when(preference.getNotificationFormats()).thenReturn(
-                Sets.newSet(NotificationFormat.ALERT, NotificationFormat.EMAIL));
+            Set.of(NotificationFormat.ALERT, NotificationFormat.EMAIL));
         when(preference.isEnabled()).thenReturn(true);
 
-        when(resolver.resolve(entityStringValue, resultReference.getType())).thenReturn(resultReference);
+        when(this.resolver.resolve(entityStringValue, resultReference.getType())).thenReturn(resultReference);
 
-        when(serializer.serialize(eq(resultReference))).thenReturn(entityStringValue);
+        when(this.serializer.serialize(eq(resultReference))).thenReturn(entityStringValue);
 
         when(preference.getStartingDate()).thenReturn(new Date(0));
 
@@ -129,7 +128,7 @@ class ScopeNotificationFilterTest
         NotificationPreference preference = mock(NotificationPreference.class);
         when(preference.getCategory()).thenReturn(NotificationPreferenceCategory.DEFAULT);
         when(preference.getProperties()).thenReturn(
-                Collections.singletonMap(NotificationPreferenceProperty.EVENT_TYPE, ""));
+            Map.of(NotificationPreferenceProperty.EVENT_TYPE, ""));
 
         assertTrue(this.scopeNotificationFilter.matchesPreference(preference));
     }
@@ -171,73 +170,74 @@ class ScopeNotificationFilterTest
         // Mock β
         WikiReference wikiReference = new WikiReference("wikiA");
         NotificationFilterPreference prefβ = mockNotificationFilterPreference("wikiA",
-                wikiReference, NotificationFilterType.EXCLUSIVE, null);
+            wikiReference, NotificationFilterType.EXCLUSIVE, null);
 
         // Mock γ
         SpaceReference spaceReferenceB = new SpaceReference("SpaceB", wikiReference);
         NotificationFilterPreference prefγ = mockNotificationFilterPreference("wikiA:SpaceB",
-                spaceReferenceB, NotificationFilterType.INCLUSIVE, "update");
+            spaceReferenceB, NotificationFilterType.INCLUSIVE, "update");
 
         // Mock δ
         SpaceReference spaceReferenceC = new SpaceReference("SpaceC", spaceReferenceB);
         NotificationFilterPreference prefδ = mockNotificationFilterPreference("wikiA:SpaceB.SpaceC",
-                spaceReferenceC, NotificationFilterType.EXCLUSIVE, null);
+            spaceReferenceC, NotificationFilterType.EXCLUSIVE, null);
 
         // Mock ε
         SpaceReference spaceReferenceD = new SpaceReference("SpaceD", spaceReferenceC);
         NotificationFilterPreference prefε = mockNotificationFilterPreference("wikiA:SpaceB.SpaceC.SpaceD",
-                spaceReferenceD, NotificationFilterType.INCLUSIVE, null);
+            spaceReferenceD, NotificationFilterType.INCLUSIVE, null);
 
-        Collection<NotificationFilterPreference> filterPreferences = Sets.newSet(prefβ, prefγ, prefδ, prefε);
+        Collection<NotificationFilterPreference> filterPreferences = new LinkedHashSet<>(List.of(prefβ, prefγ, prefδ, prefε));
 
         DocumentReference user = new DocumentReference("xwiki", "XWiki", "User");
 
         // Test 1
         ExpressionNode result = this.scopeNotificationFilter.filterExpression(user, filterPreferences, preference);
         assertNotNull(result);
-        assertEquals("(((NOT (WIKI = \"wikiA\") OR ((WIKI = \"wikiA\" AND SPACE STARTS WITH \"wikiA:SpaceB\")" +
-                " AND DATE >= \""+ new Date(0).toString() + "\")) "+
-                "OR ((WIKI = \"wikiA\" AND SPACE STARTS WITH \"wikiA:SpaceB.SpaceC.SpaceD\") " +
-                "AND DATE >= \""+ new Date(0).toString() + "\")) "+
-                "AND (NOT ((WIKI = \"wikiA\" " +
-                "AND SPACE STARTS WITH \"wikiA:SpaceB.SpaceC\")) OR ((WIKI = \"wikiA\" " +
-                "AND SPACE STARTS WITH \"wikiA:SpaceB.SpaceC.SpaceD\") AND DATE >= \""+ new Date(0).toString() + "\")))",
-                result.toString());
+        assertEquals("(((NOT (WIKI = \"wikiA\") OR ((WIKI = \"wikiA\" AND SPACE STARTS WITH \"wikiA:SpaceB\")"
+            + " AND DATE >= \"" + new Date(0).toString() + "\")) "
+            + "OR ((WIKI = \"wikiA\" AND SPACE STARTS WITH \"wikiA:SpaceB.SpaceC.SpaceD\") "
+            + "AND DATE >= \"" + new Date(0).toString() + "\")) "
+            + "AND (NOT ((WIKI = \"wikiA\" "
+            + "AND SPACE STARTS WITH \"wikiA:SpaceB.SpaceC\")) OR ((WIKI = \"wikiA\" "
+            + "AND SPACE STARTS WITH \"wikiA:SpaceB.SpaceC.SpaceD\") AND DATE >= \"" + new Date(0).toString()
+            + "\")))",
+            result.toString());
 
         // Test with wikiA:SpaceE (filtered by β)
         Event event1 = mock(Event.class);
         when(event1.getSpace()).thenReturn(new SpaceReference("SpaceE", wikiReference));
         when(event1.getDate()).thenReturn(new Date(100));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
-                this.scopeNotificationFilter.filterEvent(event1, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event1, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiA:SpaceB.DocumentE (kept by γ)
         Event event2 = mock(Event.class);
         when(event2.getDocument()).thenReturn(new DocumentReference("DocumentE", spaceReferenceB));
         when(event2.getDate()).thenReturn(new Date(100));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-                this.scopeNotificationFilter.filterEvent(event2, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event2, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiA:SpaceB.SpaceC.DocumentF (filtered by δ)
         Event event3 = mock(Event.class);
         when(event3.getDocument()).thenReturn(new DocumentReference("DocumentF", spaceReferenceC));
         when(event3.getDate()).thenReturn(new Date(100));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
-                this.scopeNotificationFilter.filterEvent(event3, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event3, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiA:SpaceB.SpaceC.SpaceD.DocumentG (kept by ε)
         Event event4 = mock(Event.class);
         when(event4.getDocument()).thenReturn(new DocumentReference("DocumentG", spaceReferenceD));
         when(event4.getDate()).thenReturn(new Date(100));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-                this.scopeNotificationFilter.filterEvent(event4, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event4, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiB:SpaceH.DocumentI - filtered because nothing match and there is no top level inclusive filter
         Event event5 = mock(Event.class);
         when(event5.getDocument()).thenReturn(new DocumentReference("wikiB", "SpaceH", "DocumentI"));
         when(event5.getDate()).thenReturn(new Date(100));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
-                this.scopeNotificationFilter.filterEvent(event5, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event5, user, filterPreferences, NotificationFormat.ALERT));
     }
 
     @Test
@@ -261,50 +261,50 @@ class ScopeNotificationFilterTest
         WikiReference wikiReference = new WikiReference("wikiA");
         SpaceReference spaceReferenceB = new SpaceReference("SpaceB", new WikiReference(wikiReference));
         NotificationFilterPreference prefγ = mockNotificationFilterPreference("wikiA:SpaceB",
-                spaceReferenceB, NotificationFilterType.INCLUSIVE, null);
+            spaceReferenceB, NotificationFilterType.INCLUSIVE, null);
 
         // Mock ζ
         DocumentReference documentReference = new DocumentReference("wikiA", "SpaceM", "DocumentN");
         NotificationFilterPreference prefζ = mockNotificationFilterPreference("wikiA:SpaceM.DocumentN",
-                documentReference, NotificationFilterType.INCLUSIVE, null);
+            documentReference, NotificationFilterType.INCLUSIVE, null);
         when(prefζ.getStartingDate()).thenReturn(new Date(99000));
 
-        Collection<NotificationFilterPreference> filterPreferences = Sets.newSet(prefγ, prefζ);
+        Collection<NotificationFilterPreference> filterPreferences = new LinkedHashSet<>(List.of(prefγ, prefζ));
 
         DocumentReference user = new DocumentReference("xwiki", "XWiki", "User");
 
         // Test 1
         String result = this.scopeNotificationFilter.filterExpression(user, filterPreferences, preference).toString();
         assertEquals("((WIKI = \"wikiA\" AND SPACE STARTS WITH \"wikiA:SpaceB\") "
-                + "AND DATE >= \""+ new Date(0).toString() + "\")", result);
+            + "AND DATE >= \"" + new Date(0).toString() + "\")", result);
 
         // Test with wikiA:SpaceE (filtered by γ & ζ)
         Event event1 = mock(Event.class);
         when(event1.getSpace()).thenReturn(new SpaceReference("SpaceE", wikiReference));
         when(event1.getDate()).thenReturn(new Date(100000));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
-                this.scopeNotificationFilter.filterEvent(event1, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event1, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiA:SpaceB.DocumentJ (kept by γ)
         Event event2 = mock(Event.class);
         when(event2.getDocument()).thenReturn(new DocumentReference("wikiA", "SpaceB", "DocumentJ"));
         when(event2.getDate()).thenReturn(new Date(100000));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-                this.scopeNotificationFilter.filterEvent(event2, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event2, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiB:SpaceK.DocumentL (filtered by γ & ζ)
         Event event3 = mock(Event.class);
         when(event3.getDocument()).thenReturn(new DocumentReference("wikiB", "SpaceK", "DocumentL"));
         when(event3.getDate()).thenReturn(new Date(100000));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
-                this.scopeNotificationFilter.filterEvent(event3, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event3, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiA:SpaceM.DocumentN (kept by ζ)
         Event event4 = mock(Event.class);
         when(event4.getDocument()).thenReturn(new DocumentReference("wikiA", "SpaceM", "DocumentN"));
         when(event4.getDate()).thenReturn(new Date(100000));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
-                this.scopeNotificationFilter.filterEvent(event4, user, filterPreferences, NotificationFormat.ALERT));
+            this.scopeNotificationFilter.filterEvent(event4, user, filterPreferences, NotificationFormat.ALERT));
 
         // Test with wikiA:SpaceM.DocumentN sent before ζ has been created
         Event event5 = mock(Event.class);
@@ -337,46 +337,46 @@ class ScopeNotificationFilterTest
         when(pref1.getStartDate()).thenReturn(new Date(0));
         when(pref2.getStartDate()).thenReturn(new Date(100000L));
 
-        List<NotificationPreference> notificationFilterPreferences = Arrays.asList(pref1, pref2);
+        List<NotificationPreference> notificationFilterPreferences = List.of(pref1, pref2);
 
         DocumentReference pageRef = new DocumentReference("wikiA", "SpaceB", "PageC");
         NotificationFilterPreference prefγ = mockNotificationFilterPreference("wikiA:SpaceB:PageC",
-                pageRef, NotificationFilterType.INCLUSIVE, null);
+            pageRef, NotificationFilterType.INCLUSIVE, null);
         NotificationFilterPreference prefz = mockNotificationFilterPreference("wikiA:SpaceB:PageD",
-                pageRef, NotificationFilterType.EXCLUSIVE, null);
+            pageRef, NotificationFilterType.EXCLUSIVE, null);
 
-        Collection<NotificationFilterPreference> filterPreferences = Sets.newSet(prefγ);
+        Collection<NotificationFilterPreference> filterPreferences = new LinkedHashSet<>(List.of(prefγ));
 
         DocumentReference user = new DocumentReference("xwiki", "XWiki", "User");
 
         // Test 1
         assertEquals(
-                "(((TYPE = \"type1\" AND DATE >= \"" + new Date(0).toString() + "\") " +
-                        "OR (TYPE = \"type2\" AND DATE >= \"" + new Date(100000L).toString() + "\")) " +
-                        "AND CONCAT(CONCAT(WIKI, \":\"), PAGE) IN " +
-                        "(SELECT nfp.pageOnly FROM DefaultNotificationFilterPreference nfp WHERE nfp.owner = :owner " +
-                        "AND nfp.filterType = 0 AND nfp.filterName = 'scopeNotificationFilter' " +
-                        "AND nfp.pageOnly IS NOT NULL AND nfp.pageOnly <> '' " +
-                        "AND (nfp.allEventTypes = '' OR nfp.allEventTypes IS NULL) " +
-                        "AND nfp.alertEnabled = true AND nfp.enabled = true AND nfp.startingDate <= event.date))",
-                this.scopeNotificationFilter.filterExpression(user, filterPreferences, NotificationFilterType.INCLUSIVE,
-                NotificationFormat.ALERT, notificationFilterPreferences).toString());
+            "(((TYPE = \"type1\" AND DATE >= \"" + new Date(0).toString() + "\") "
+                + "OR (TYPE = \"type2\" AND DATE >= \"" + new Date(100000L).toString() + "\")) "
+                + "AND CONCAT(CONCAT(WIKI, \":\"), PAGE) IN "
+                + "(SELECT nfp.pageOnly FROM DefaultNotificationFilterPreference nfp WHERE nfp.owner = :owner "
+                + "AND nfp.filterType = 0 AND nfp.filterName = 'scopeNotificationFilter' "
+                + "AND nfp.pageOnly IS NOT NULL AND nfp.pageOnly <> '' "
+                + "AND (nfp.allEventTypes = '' OR nfp.allEventTypes IS NULL) "
+                + "AND nfp.alertEnabled = true AND nfp.enabled = true AND nfp.startingDate <= event.date))",
+            this.scopeNotificationFilter.filterExpression(user, filterPreferences,
+                NotificationFilterType.INCLUSIVE, NotificationFormat.ALERT, notificationFilterPreferences).toString());
 
         // Test 2
-        assertNull(this.scopeNotificationFilter.filterExpression(user, filterPreferences, NotificationFilterType.EXCLUSIVE,
-                        NotificationFormat.ALERT, notificationFilterPreferences));
+        assertNull(this.scopeNotificationFilter.filterExpression(user, filterPreferences,
+            NotificationFilterType.EXCLUSIVE, NotificationFormat.ALERT, notificationFilterPreferences));
 
         // Test 3
-        filterPreferences = Sets.newSet(prefγ, prefz);
+        filterPreferences = new LinkedHashSet<>(List.of(prefγ, prefz));
         assertEquals(
-                "NOT (CONCAT(CONCAT(WIKI, \":\"), PAGE) IN (SELECT nfp.pageOnly " +
-                        "FROM DefaultNotificationFilterPreference nfp " +
-                        "WHERE nfp.owner = :owner AND nfp.filterType = 1 AND nfp.filterName = 'scopeNotificationFilter' " +
-                        "AND nfp.pageOnly IS NOT NULL AND nfp.pageOnly <> '' " +
-                        "AND (nfp.allEventTypes = '' OR nfp.allEventTypes IS NULL) " +
-                        "AND nfp.emailEnabled = true AND nfp.enabled = true))",
-                this.scopeNotificationFilter.filterExpression(user, filterPreferences, NotificationFilterType.EXCLUSIVE,
-                        NotificationFormat.EMAIL, notificationFilterPreferences).toString());
+            "NOT (CONCAT(CONCAT(WIKI, \":\"), PAGE) IN (SELECT nfp.pageOnly "
+                + "FROM DefaultNotificationFilterPreference nfp "
+                + "WHERE nfp.owner = :owner AND nfp.filterType = 1 AND nfp.filterName = 'scopeNotificationFilter' "
+                + "AND nfp.pageOnly IS NOT NULL AND nfp.pageOnly <> '' "
+                + "AND (nfp.allEventTypes = '' OR nfp.allEventTypes IS NULL) "
+                + "AND nfp.emailEnabled = true AND nfp.enabled = true))",
+            this.scopeNotificationFilter.filterExpression(user, filterPreferences,
+                NotificationFilterType.EXCLUSIVE, NotificationFormat.EMAIL, notificationFilterPreferences).toString());
     }
 
     @Test
@@ -407,20 +407,20 @@ class ScopeNotificationFilterTest
         NotificationFilterPreference prefζ = mockNotificationFilterPreference("wikiA:SpaceM.DocumentN",
             documentReference, NotificationFilterType.EXCLUSIVE, null);
 
-        Collection<NotificationFilterPreference> filterPreferences = Sets.newSet(prefγ, prefζ);
+        Collection<NotificationFilterPreference> filterPreferences = new LinkedHashSet<>(List.of(prefγ, prefζ));
 
         DocumentReference user = new DocumentReference("xwiki", "XWiki", "User");
 
         // Test 1
         String result = this.scopeNotificationFilter.filterExpression(user, filterPreferences, preference).toString();
         assertEquals("((WIKI = \"wikiA\" AND SPACE STARTS WITH \"wikiA:SpaceB\") "
-            + "AND DATE >= \""+ new Date(0).toString() + "\")", result);
+            + "AND DATE >= \"" + new Date(0).toString() + "\")", result);
 
         // Test with wikiA:SpaceE -> should not be filtered since inclusive filter is ignored
         Event event1 = mock(Event.class);
         when(event1.getSpace()).thenReturn(new SpaceReference("SpaceE", wikiReference));
         when(event1.getDate()).thenReturn(new Date(100));
-        when(event1.getTarget()).thenReturn(Collections.singleton("user1"));
+        when(event1.getTarget()).thenReturn(Set.of("user1"));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
             this.scopeNotificationFilter.filterEvent(event1, user, filterPreferences, NotificationFormat.ALERT));
 
@@ -428,7 +428,7 @@ class ScopeNotificationFilterTest
         Event event2 = mock(Event.class);
         when(event2.getDocument()).thenReturn(new DocumentReference("wikiA", "SpaceB", "DocumentJ"));
         when(event2.getDate()).thenReturn(new Date(100));
-        when(event2.getTarget()).thenReturn(Collections.singleton("user1"));
+        when(event2.getTarget()).thenReturn(Set.of("user1"));
         assertEquals(NotificationFilter.FilterPolicy.NO_EFFECT,
             this.scopeNotificationFilter.filterEvent(event2, user, filterPreferences, NotificationFormat.ALERT));
 
@@ -436,7 +436,7 @@ class ScopeNotificationFilterTest
         Event event3 = mock(Event.class);
         when(event3.getDocument()).thenReturn(new DocumentReference("wikiA", "SpaceM", "DocumentN"));
         when(event3.getDate()).thenReturn(new Date(100));
-        when(event3.getTarget()).thenReturn(Collections.singleton("user1"));
+        when(event3.getTarget()).thenReturn(Set.of("user1"));
         assertEquals(NotificationFilter.FilterPolicy.FILTER,
             this.scopeNotificationFilter.filterEvent(event3, user, filterPreferences, NotificationFormat.ALERT));
     }
